[gd_scene load_steps=18 format=3 uid="uid://d4iioqc7kaca2"]

[ext_resource type="Texture2D" uid="uid://cx7ql0wqm2phj" path="res://Pad.png" id="1_ilynr"]
[ext_resource type="Script" uid="uid://bqnnsg28hx15g" path="res://surgery_minigame.gd" id="1_ni3w1"]
[ext_resource type="Script" uid="uid://3gjfia4a1g10" path="res://tweezers.gd" id="3_3wtj1"]
[ext_resource type="Texture2D" uid="uid://batlvq481o12r" path="res://surgery assets/Sugery Torso.png" id="3_ciht7"]
[ext_resource type="Script" uid="uid://v3ydsr4q85so" path="res://hand_surgery.gd" id="3_xn5wx"]
[ext_resource type="Texture2D" uid="uid://cph03x4ttf664" path="res://surgery assets/Tweezers.png" id="4_ciht7"]
[ext_resource type="Script" uid="uid://cwtifor5c8lec" path="res://iron_ball.gd" id="4_dburc"]
[ext_resource type="Texture2D" uid="uid://bwwqrf0a84kl1" path="res://hand-1.png" id="4_v2oou"]
[ext_resource type="Texture2D" uid="uid://37wc3jhhb0e1" path="res://surgery assets/Iron Ball.png" id="5_ia3lh"]
[ext_resource type="Script" uid="uid://cws0m5of2p8hg" path="res://iron_ball_2.gd" id="6_ey7sn"]
[ext_resource type="Script" uid="uid://dyh5uhbkn88vp" path="res://iron_ball_3.gd" id="7_cbosh"]
[ext_resource type="Script" uid="uid://b0qi0ro5ogv1y" path="res://iron_ball_4.gd" id="8_ser75"]
[ext_resource type="Script" uid="uid://dmoe0ducv7d4d" path="res://iron_ball_5.gd" id="9_klekc"]
[ext_resource type="Script" uid="uid://cw14qryqoew4c" path="res://done_surgery.gd" id="14_cbosh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4uo0k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2myvk"]
radius = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3wtj1"]
radius = 30.265491

[node name="surgery_minigame" type="Node2D"]
script = ExtResource("1_ni3w1")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(592, 395)
texture = ExtResource("1_ilynr")

[node name="Label" type="Label" parent="background"]
offset_left = -343.0
offset_top = -347.0
offset_right = 483.0
offset_bottom = -305.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Successfully remove the objects from the dummy"

[node name="Label2" type="Label" parent="background"]
offset_left = -539.0
offset_top = 196.0
offset_right = -76.0
offset_bottom = 410.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Controls:
- Click the tweezers to pick them up
- Click with the tweezers to drag the objects"

[node name="torso" type="Area2D" parent="."]
position = Vector2(597, 359)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="torso"]
position = Vector2(0, 5)
scale = Vector2(4, 4)
texture = ExtResource("3_ciht7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="torso"]
polygon = PackedVector2Array(-137, 203, 123, 206, 112, -45, 183, -28, 229, -107, 105, -183, -122, -187, -243, -107, -201, -26, -119, -50)

[node name="iron_ball" type="Area2D" parent="."]
position = Vector2(538, 268)
script = ExtResource("4_dburc")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="iron_ball"]
shape = SubResource("CircleShape2D_4uo0k")

[node name="Sprite2D" type="Sprite2D" parent="iron_ball"]
position = Vector2(-7, 7)
scale = Vector2(2, 2)
texture = ExtResource("5_ia3lh")

[node name="iron_ball2" type="Area2D" parent="."]
position = Vector2(653, 256)
script = ExtResource("6_ey7sn")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="iron_ball2"]
shape = SubResource("CircleShape2D_4uo0k")

[node name="Sprite2D" type="Sprite2D" parent="iron_ball2"]
position = Vector2(-7, 7)
scale = Vector2(2, 2)
texture = ExtResource("5_ia3lh")

[node name="iron_ball3" type="Area2D" parent="."]
position = Vector2(540, 360)
script = ExtResource("7_cbosh")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="iron_ball3"]
shape = SubResource("CircleShape2D_4uo0k")

[node name="Sprite2D" type="Sprite2D" parent="iron_ball3"]
position = Vector2(-7, 7)
scale = Vector2(2, 2)
texture = ExtResource("5_ia3lh")

[node name="iron_ball4" type="Area2D" parent="."]
position = Vector2(637, 409)
script = ExtResource("8_ser75")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="iron_ball4"]
shape = SubResource("CircleShape2D_4uo0k")

[node name="Sprite2D" type="Sprite2D" parent="iron_ball4"]
position = Vector2(-7, 7)
scale = Vector2(2, 2)
texture = ExtResource("5_ia3lh")

[node name="iron_ball5" type="Area2D" parent="."]
position = Vector2(546, 462)
script = ExtResource("9_klekc")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="iron_ball5"]
shape = SubResource("CircleShape2D_4uo0k")

[node name="Sprite2D" type="Sprite2D" parent="iron_ball5"]
position = Vector2(-7, 7)
scale = Vector2(2, 2)
texture = ExtResource("5_ia3lh")

[node name="tweezers" type="Area2D" parent="."]
position = Vector2(1035, 272)
script = ExtResource("3_3wtj1")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="tweezers"]
shape = SubResource("CircleShape2D_2myvk")

[node name="Sprite2D" type="Sprite2D" parent="tweezers"]
position = Vector2(-10, 3)
scale = Vector2(2, 2)
texture = ExtResource("4_ciht7")

[node name="Button" type="Button" parent="."]
offset_left = 926.0
offset_top = 634.0
offset_right = 1072.0
offset_bottom = 723.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="hand" type="CharacterBody2D" parent="."]
script = ExtResource("3_xn5wx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hand"]
position = Vector2(-17, 25)
shape = SubResource("CircleShape2D_3wtj1")

[node name="playerhand" type="Sprite2D" parent="hand"]
position = Vector2(0, 57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_v2oou")

[node name="done" type="Label" parent="."]
visible = false
offset_left = 454.0
offset_top = 232.0
offset_right = 737.0
offset_bottom = 369.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Done!"
script = ExtResource("14_cbosh")

[connection signal="area_entered" from="torso" to="." method="_on_torso_area_entered"]
[connection signal="area_entered" from="torso" to="iron_ball" method="_on_torso_area_entered"]
[connection signal="area_entered" from="torso" to="iron_ball2" method="_on_torso_area_entered"]
[connection signal="area_entered" from="torso" to="iron_ball3" method="_on_torso_area_entered"]
[connection signal="area_entered" from="torso" to="iron_ball4" method="_on_torso_area_entered"]
[connection signal="area_entered" from="torso" to="iron_ball5" method="_on_torso_area_entered"]
[connection signal="area_exited" from="torso" to="iron_ball" method="_on_torso_area_exited"]
[connection signal="area_exited" from="torso" to="iron_ball2" method="_on_torso_area_exited"]
[connection signal="area_exited" from="torso" to="iron_ball3" method="_on_torso_area_exited"]
[connection signal="area_exited" from="torso" to="iron_ball4" method="_on_torso_area_exited"]
[connection signal="area_exited" from="torso" to="iron_ball5" method="_on_torso_area_exited"]
[connection signal="body_entered" from="iron_ball" to="." method="_on_iron_ball_body_entered"]
[connection signal="body_entered" from="iron_ball" to="hand" method="_on_iron_ball_body_entered"]
[connection signal="body_exited" from="iron_ball" to="hand" method="_on_iron_ball_body_exited"]
[connection signal="body_entered" from="iron_ball2" to="hand" method="_on_iron_ball_2_body_entered"]
[connection signal="body_exited" from="iron_ball2" to="hand" method="_on_iron_ball_2_body_exited"]
[connection signal="body_entered" from="iron_ball3" to="hand" method="_on_iron_ball_3_body_entered"]
[connection signal="body_exited" from="iron_ball3" to="hand" method="_on_iron_ball_3_body_exited"]
[connection signal="body_entered" from="iron_ball4" to="hand" method="_on_iron_ball_4_body_entered"]
[connection signal="body_exited" from="iron_ball4" to="hand" method="_on_iron_ball_4_body_exited"]
[connection signal="body_entered" from="iron_ball5" to="hand" method="_on_iron_ball_5_body_entered"]
[connection signal="body_exited" from="iron_ball5" to="hand" method="_on_iron_ball_5_body_exited"]
[connection signal="body_entered" from="tweezers" to="." method="_on_tweezers_body_entered"]
[connection signal="body_entered" from="tweezers" to="hand" method="_on_tweezers_body_entered"]
[connection signal="body_exited" from="tweezers" to="hand" method="_on_tweezers_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
